syntax = "proto3";
package blog;
import "google/protobuf/empty.proto";

service BlogService {
    rpc createUser(CreateUserRequest) returns (CreateUserResponse);
    rpc deleteUser(google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc login(LoginRequest) returns (LoginResponse);
    rpc getMembers(google.protobuf.Empty) returns (GetMembersResponse);
    rpc getBlogByUsers(GetBlogByUsersRequest) returns (GetBlogByUsersResponse);
    rpc getBlogById (GetBlogByIdRequest) returns (GetBlogByIdResponse);
    rpc getSummary(GetSummaryRequest) returns (GetSummaryResponse);
    rpc getSummaryStream(GetSummaryRequest) returns (stream GetSummaryResponse);
    rpc postBlog(PostBlog) returns (google.protobuf.Empty);
}

enum Order {
    ASC = 0;
    DESC = 1;
}

message Pagination {
    int32 page = 1;
    int32 pageSize = 2;
    Order order = 3;
}

message PageInfo {
    int32 totalCount = 2;
}

message Member {
    string userId = 1;
    string name = 2;
    // string avater
}

message BlogPreview {
    int64 id = 1;
    string created_at = 2;
    string title = 3;
    repeated string tags = 4;
    string user_id = 5;
}


message Blog {
    int64 id = 1;
    string created_at = 2;
    string title = 3;
    string body = 4;
    repeated string tags = 5;
    string user_id = 6;
}

message PostBlog {
    string title = 1;
    string url = 2;
    string body = 3;
    repeated string tags = 4;
}

message CreateUserRequest {
    string userId = 1;
    string name = 2;
    string password = 3;
    optional string QiitaId = 4;
    optional string QiitaApiKey = 5;
}

message CreateUserResponse {
    string token = 1;
}

message LoginRequest {
    string userId = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}


message GetMembersResponse {
    repeated Member members = 1;
}

message GetBlogByUsersRequest {
    repeated string ids = 1;
    Pagination pagination = 2;
}

message GetBlogByUsersResponse {
    repeated BlogPreview blogs = 1;
    int32 total_count = 2;
}

message GetBlogByIdRequest {
    int64 id = 1;
}

message GetBlogByIdResponse {
    int64 id = 1;
    string created_at = 2;
    string title = 3;
    string body = 4;
    repeated string tags = 5;
    string user_id = 6;
}

message GetSummaryRequest {
    int64 blog_id = 1;
}

message GetSummaryResponse {
    string summary_text = 1;
}




